# calculator-crewai

./: .gitignore  README.md  pyproject.toml
src/calculator/: crew.py  main.py
src/calculator/config/: agents.yaml  tasks.yaml
