[project]
name = "calculator"
version = "0.1.0"
description = "calculator using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
]

[project.scripts]
calculator = "calculator.main:run"
run_crew = "calculator.main:run"
train = "calculator.main:train"
replay = "calculator.main:replay"
test = "calculator.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
